--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RevolutTask</string>
+    <string name="unknown_error">Oops! something went wrong</string>
 </resources>
